Move calculation of molecular profile ids in one place